style(asset-management): fix spacing in tablet view

--- a/src/pages/asset-management.module.less
+++ b/src/pages/asset-management.module.less
@@ -43,9 +43,16 @@
 @media (max-width: 768px) {
   .assetManagementContainer {
     max-width: 768px;
+    margin-bottom: 24px;
 
     .callout, .stdContent {
       width: 720px;
+      margin: 24px auto;
+    }
+
+    .callout {
+      font-size: 27px;
+      line-height: 36px;
     }
 
     .stdContent {
